src/main/resources/kube/deploy.yaml
---

# Deployment descriptor
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: "bqueue"
    group: "net.alainpham"
  name: "bqueue"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "bqueue"
      group: "net.alainpham"
  template:
    metadata:
      labels:
        app: "bqueue"
        group: "net.alainpham"
    spec:
      containers:
      - name: bqueue
        image: "alainpham/bqueue:latest"
        imagePullPolicy: "Always"
        livenessProbe:
          failureThreshold: 9
          httpGet:
            path: "/q/health"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 10
          successThreshold: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: "/q/health"
            port: 8080
            scheme: "HTTP"
          initialDelaySeconds: 10
          successThreshold: 1
        resources:
          limits:
            cpu: "1.0"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "128Mi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/deployments/tls"
          name: "tls-secret-volume"
          readOnly: true
        - mountPath: "/deployments/config"
          name: "prop-secret-volume"
          readOnly: true
      volumes:
      - name: "tls-secret-volume"
        secret:
          defaultMode: 420
          secretName: "bqueue-tls-secret"
      - name: "prop-secret-volume"
        secret:
          defaultMode: 420
          secretName: "bqueue-prop-secret"
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: "bqueue"
    group: "net.alainpham"
  name: "bqueue"
spec:
  type: LoadBalancer
  ports:
  - name: "http"
    port: 8080
    protocol: "TCP"
    targetPort: 8080
  selector:
    app: "bqueue"
    group: "net.alainpham"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bqueue
  labels:
    app: "bqueue"
    group: "net.alainpham"
  annotations:
    haproxy.org/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  rules:
  - host: bqueue.KUBEHOSTNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bqueue
            port:
              number: 8080
---
